Restaurant Dashboard - custom styling added and mobile view spacing corrected

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,4 +176,8 @@ table td{
     
 }
 
+.text-orange{
+    color:rgb(245, 94, 7);
+}
+
 
